# vasp-parameter-benchmarking

./: .gitignore  LICENCE  README.md  pushing_to_github.sh  pyproject.toml
src/vasp_parameter_benchmarking/: __init__.py  clean.py  cli.py  generate.py  incar.py  index.py  kpoints.py  options_file.py  outcar.py  parameters.py  report.py  sacct.py  submit.py
